tests/fixtures/positive/licensing/dependency-license-unknown/app/build.gradle.kts
plugins {
    id("org.jetbrains.kotlin.jvm")
}

dependencies {
    implementation("fixture.registry:proprietary-lib:1.0.0")
    implementation("org.jetbrains.kotlin:kotlin-stdlib:2.0.0")
}
