tests/fixtures/negative/licensing/dependency-license-unknown/app/build.gradle.kts
plugins {
    id("org.jetbrains.kotlin.jvm")
}

dependencies {
    implementation("fixture.registry:apache-friendly-lib:1.0.0")
    implementation("org.jetbrains.kotlin:kotlin-stdlib:2.0.0")
}
